<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextFraisTaxi"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextTextFraisTrain"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/fraistaxi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="282dp"
        android:labelFor="@id/editTextTextFraisTaxi"
        android:text="@string/frais_taxi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fraistrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="280dp"
        android:labelFor="@id/editTextTextFraisTrain"
        android:text="@string/frais_train_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextFraisSaisie"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/fraissaisie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="268dp"
        android:labelFor="@id/editTextTextFraisSaisie"
        android:text="@string/frais_saisie_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonValider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="248dp"
        android:text="@string/valider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextFraisTrain" />

    <Button
        android:id="@+id/ButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="3dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSaisieProduit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/saisieproduit"
        app:layout_constraintStart_toEndOf="@+id/ButtonLogin"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/AffichageProduitButton"
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/affichage_produit"
        app:layout_constraintStart_toEndOf="@+id/buttonSaisieProduit"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>