<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaisieProduit">

    <EditText
        android:id="@+id/editTextDesignation"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DesignationLabel"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextPrix"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Prixlabel"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextStock"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prixlabel"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/ReferenceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="97dp"
        android:text="@string/reference"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextReference"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReferenceLabel"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/DesignationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="12dp"
        android:text="@string/designation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextReference" />

    <TextView
        android:id="@+id/Prixlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="12dp"
        android:text="@string/prix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDesignation" />

    <TextView
        android:id="@+id/prixlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/stock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrix" />

    <Button
        android:id="@+id/buttonValid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="18dp"
        android:text="@string/valider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextStock" />

</androidx.constraintlayout.widget.ConstraintLayout>